updated some stylings

--- a/ui/sections/network/controls/table-hosts.reel/table-row-host.reel/table-row-host.html
+++ b/ui/sections/network/controls/table-hosts.reel/table-row-host.reel/table-row-host.html
@@ -44,9 +44,7 @@
 <body>
     <div data-montage-id="owner" class="TableRowHost Table-cells">
         <div><div data-montage-id="id"></div></div>
-        <div>
-            <div data-montage-id="addresses"></div>
-        <div>
+        <div><div data-montage-id="addresses"></div><div>
     </div>
 </body>
 </html>
