--- a/ui/sections/network/controls/table-routes.reel/table-routes.html
+++ b/ui/sections/network/controls/table-routes.reel/table-routes.html
@@ -21,7 +21,7 @@
                         "value": "Id"
                     },
                     {
-                        "value": "CIDR Block"
+                        "value": "CIDR block"
                     },
                     {
                         "value": "Gateway"
