--- a/ui/sections/network/inspectors/settings.reel/settings.html
+++ b/ui/sections/network/inspectors/settings.reel/settings.html
@@ -201,10 +201,10 @@
                 "placeholder": {"<-": "!@owner.object.settings.config.dhcp.assign_dns ? 'eg. 1.2.3.4' : ''"}
             }
         },
-        "static_route_settings": {
+        "routes_header": {
             "prototype": "ui/controls/foldable-section.reel",
             "properties": {
-                "element": {"#": "static_route_settings"},
+                "element": {"#": "routes_header"},
                 "title": "Static Routes"
             }
         },
@@ -254,7 +254,7 @@
                 <div data-montage-id="netwait_enabled"></div>
                 <div data-montage-id="netwait_addresses"></div>
             </div>
-            <div data-montage-id="static_route_settings">
+            <div data-montage-id="routes_header">
                 <div data-montage-id="routes">
                     <div></div>
                 </div>
