updated to avoid keeping the states

--- a/ui/sections/storage/inspectors/snapshot.reel/snapshot.html
+++ b/ui/sections/storage/inspectors/snapshot.reel/snapshot.html
@@ -139,7 +139,7 @@
                 "label": "Recursive"
             },
             "bindings": {
-                "checked": {"<->": "!!@owner.recursive"}
+                "checked": {"<->": "!!@owner.object._recursive"}
             }
         },
         "creationCondition": {
