adds contentMaxHeight to boot-pool table

--- a/ui/inspectors/system-section.reel/boot-pool.reel/boot-pool.html
+++ b/ui/inspectors/system-section.reel/boot-pool.reel/boot-pool.html
@@ -68,6 +68,7 @@
             "properties": {
                 "element": {"#": "bootEnvironmentTable"},
                 "label": "Boot Environments",
+                "contentMaxHeight": 25,
                 "columns": [
                     {
                         "value": "Name"
