Better way to fix the null group drop down field
Ticket: #16522

--- a/ui/inspectors/user.reel/user.html
+++ b/ui/inspectors/user.reel/user.html
@@ -205,7 +205,7 @@
             },
             "bindings": {
                 "selectedValue": {"<->": "@owner.object.group"},
-                "options": {"<-": "[{id: -1, name: ' - ', builtin: false}].concat(@owner.groupOptions).sorted{builtin + name}"}
+                "options": {"<-": "[{id: null, name: ' - ', builtin: false}].concat(@owner.groupOptions).sorted{builtin + name}"}
             }
         },
         "groupDisplay": {
