cleans up storage overview and storage import columes

--- a/ui/sections/storage/inspectors/encrypted-volume-importer.reel/encrypted-volume-importer.html
+++ b/ui/sections/storage/inspectors/encrypted-volume-importer.reel/encrypted-volume-importer.html
@@ -36,6 +36,7 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "name"},
+                "placeholderValue": "enter name...",
                 "label": "Name"
             },
             "bindings": {
@@ -46,6 +47,7 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "key"},
+                "placeholderValue": "enter key...",
                 "label": "Key"
             },
             "bindings": {
@@ -56,6 +58,7 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "password"},
+                "placeholderValue": "enter password...",
                 "label": "Password"
             },
             "bindings": {
