--- a/ui/sections/storage/inspectors/overview.reel/overview.html
+++ b/ui/sections/storage/inspectors/overview.reel/overview.html
@@ -50,8 +50,8 @@
         <div data-montage-id="scrollView">
             <div>
                 <div class="Overview-content">
-                    <div data-montage-id="volumesSectionTitle"></div>
-                    <div data-montage-id="volumes">
+                    <div data-montage-id="volumesSectionTitle" class="flush-top"></div>
+                    <div data-montage-id="volumes" class="g-margin-bottom">
                         <div data-montage-id="volume"></div>
                     </div>
                 </div>
