--- a/ui/sections/storage/inspectors/volume-importer.reel/volume-importer.html
+++ b/ui/sections/storage/inspectors/volume-importer.reel/volume-importer.html
@@ -53,7 +53,7 @@
 <body>
     <div data-montage-id="owner" class="VolumeImporter">
         <div data-montage-id="detachedVolumes"></div>
-        <div data-montage-id="refresh"></div>
+        <div data-montage-id="refresh" class="g-margin"></div>
         <div data-montage-id="encrypted"></div>
     </div>
 </body>
