added snapshots section under volume/dataset

--- a/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
+++ b/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
@@ -109,6 +109,24 @@
             "bindings": {
                 "object": {"<->": "@owner.object"}
             }
+        },
+        "createdCondition": {
+            "prototype": "montage/ui/condition.reel",
+            "properties": {
+                "element": {"#": "createdCondition"}
+            },
+            "bindings": {
+                "condition": {"<-": "!!@owner.object.id"}
+            }
+        },
+        "snapshots": {
+            "prototype": "./volume-dataset-snapshots.reel",
+            "properties": {
+                "element": {"#": "snapshots"}
+            },
+            "bindings": {
+                "object": {"<->": "@owner.object"}
+            }
         }
     }
     </script>
@@ -125,6 +143,9 @@
             </div>
             <div data-montage-id="typeSelector"></div>
             <div data-montage-id="settings"></div>
+            <div data-montage-id="createdCondition">
+                <div data-montage-id="snapshots"></div>
+            </div>
         </div>
     </div>
 </body>
