adds flex to treeview-path-input

--- a/ui/controls/field-treeview.reel/field-treeview.html
+++ b/ui/controls/field-treeview.reel/field-treeview.html
@@ -88,7 +88,7 @@
     <div data-montage-id="owner" class="FieldTreeview">
         <div data-montage-id="field">
             <div class="FieldTreeview-path flex-row">
-                <div data-montage-id="pathInput" tabindex="0" class="g-margin-right--half"></div>
+                <div data-montage-id="pathInput" tabindex="0" class="g-margin-right--half FieldTreeview-path-input"></div>
                 <div data-montage-id="iconSubstitution" class="FieldTreeview-icon">
                     <svg data-arg="FILE"><use xlink:href="#i-file"/></svg>
                     <svg data-arg="DATASET"><use xlink:href="#i-dataset"/></svg>
