Add blank default category to support ui.
Ticket: #18721

--- a/ui/sections/system/inspectors/support.reel/support.html
+++ b/ui/sections/system/inspectors/support.reel/support.html
@@ -66,7 +66,7 @@
             },
             "bindings": {
                 "selectedValue": {"<->": "@owner.object.category"},
-                "options": {"<-": "@owner.categoryOptions"}
+                "options": {"<-": "[{label: '-', value: '-'}].concat(@owner.categoryOptions)"}
             }
         },
         "debug": {
