fixed bug when checking new object

--- a/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
+++ b/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
@@ -116,7 +116,7 @@
                 "element": {"#": "createdCondition"}
             },
             "bindings": {
-                "condition": {"<-": "!!@owner.object.id"}
+                "condition": {"<-": "!@owner.object._isNew"}
             }
         },
         "snapshots": {
