Clear name input after saving or when editor is re-entring in the DOM.

--- a/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
+++ b/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
@@ -9,6 +9,7 @@
                 "element": {"#": "owner"},
                 "validationController": {"@": "validationController"},
                 "inspector": {"@": "inspector"},
+                "_nameComponent": {"@": "names"},
                 "_commandComponent": {"@": "command"},
                 "_volumesComponent": {"@": "volumesTable"},
                 "_settingsComponent": {"@": "settingsTable"},
