--- a/ui/sections/peering/inspectors/peering-creator.reel/peering-creator.html
+++ b/ui/sections/peering/inspectors/peering-creator.reel/peering-creator.html
@@ -58,7 +58,7 @@
         <div data-montage-id="ssh"></div>
         <div data-montage-id="amazon-s3"></div>
         <div data-montage-id="freenas"></div>
-        <div data-montage-id="vmware"></div
+        <div data-montage-id="vmware"></div>
     </div>
 </body>
 </html>
