changes class name from hide to is-hidden

--- a/ui/controls/traffic-light.reel/traffic-light.html
+++ b/ui/controls/traffic-light.reel/traffic-light.html
@@ -9,7 +9,7 @@
                 "element": {"#": "owner"}
             },
             "bindings": {
-                "classList.has('hide')": {"<-": "!@owner.colorMapping"}
+                "classList.has('is-hidden')": {"<-": "!@owner.colorMapping"}
             }
         }
     }
