--- a/ui/sections/system/inspectors/alert.reel/mail.reel/mail.html
+++ b/ui/sections/system/inspectors/alert.reel/mail.reel/mail.html
@@ -8,7 +8,13 @@
         "owner": {
             "properties": {
                 "element": {"#": "owner"}
-            }
+            },
+            "listeners": [
+                {
+                    "type": "action",
+                    "listener": {"@": "owner"}
+                }
+            ]
         },
         "validationController": {
             "prototype": "core/controller/validation-controller",
@@ -121,6 +127,28 @@
             "bindings": {
                 "value": {"<->": "@owner.object.pass"}
             }
+        },
+        "sendTestMail": {
+            "prototype": "blue-shark/ui/button.reel",
+            "properties": {
+                "element": {"#": "sendTestMail"},
+                "value": "Send Test Mail"
+            }
+        },
+        "send_to": {
+            "prototype": "blue-shark/ui/field-multiple-select.reel",
+            "properties": {
+                "element": {"#": "send_to"},
+                "label": "Send to",
+                "labelPath": "this",
+                "isDraggable": true,
+                "inputTitle": "Add a recipient",
+                "valuesTitle": "Recipients"
+            },
+            "bindings": {
+                "values": {"<->": "@owner.object.to"},
+                "placeholder": {"<-": "!@owner.object.webui_listen ? 'eg. foo@example.com' : ''"}
+            }
         }
     }
     </script>
@@ -128,6 +156,7 @@
 <body>
     <div data-montage-id="owner" class="Mail">
         <div data-montage-id="inspector">
+            <div data-montage-id="sendTestMail" class="g-margin-bottom--half" id="downloadDebug"></div>
             <div data-montage-id="from"></div>
             <div data-montage-id="outgoing_server"></div>
             <div data-montage-id="outgoing_port"></div>
@@ -135,6 +164,7 @@
             <div data-montage-id="encryption"></div>
             <div data-montage-id="username"></div>
             <div data-montage-id="password"></div>
+            <div data-montage-id="send_to"></div>
         </div>
     </div>
 </body>
