Fix an issue when trying to re-select a collection

--- a/ui/sections/containers/controls/docker-collection-list.reel/docker-collection-list.html
+++ b/ui/sections/containers/controls/docker-collection-list.reel/docker-collection-list.html
@@ -9,7 +9,7 @@
                 "element": {"#": "owner"}
             },
             "bindings": {
-                "selectedCollection": {"<-": "@list.selectedObject"}
+                "selectedCollection": {"<->": "@list.selectedObject"}
             }
         },
 
