Use properly the collection object when searching for docker images. Ticket: #18737

--- a/ui/sections/containers/controls/docker-image-search.reel/docker-image-search.html
+++ b/ui/sections/containers/controls/docker-image-search.reel/docker-image-search.html
@@ -15,13 +15,13 @@
         },
 
         "collection": {
-            "prototype": "blue-shark/ui/field-text-input.reel",
+            "prototype": "blue-shark/ui/field-text.reel",
             "properties": {
                 "element": {"#": "collection"},
                 "label": "Collection"
             },
             "bindings": {
-                "value": {"<->": "@owner.collectionValue"}
+                "value": {"<->": "@owner.collection.name"}
             }
         },
 
