Use properly the collection object when searching for docker images. Ticket: #18737

--- a/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
+++ b/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
@@ -56,7 +56,7 @@
             },
             "bindings": {
                 "_sectionService": {"<-": "@owner._sectionService"},
-                "collectionValue": {"<-": "@owner._collection.collection"}
+                "collection": {"<-": "@owner._collection"}
             }
         },
 
