Add the collection list when pulling a docker image.

--- a/ui/sections/containers/inspectors/docker-image-pull.reel/docker-image-pull.html
+++ b/ui/sections/containers/inspectors/docker-image-pull.reel/docker-image-pull.html
@@ -39,7 +39,7 @@
             },
             "bindings": {
                 "_sectionService": {"<-": "@owner._sectionService"},
-                "collectionValue": {"<-": "@owner._dockerSettings.default_collection.defined() ? @owner._dockerSettings.default_collection : 'freenas'"}
+                "collection": {"<-": "@owner._collection"}
             }
         },
 
