fixes scrolling bug in system sections

--- a/ui/inspectors/system-section.reel/system-section.html
+++ b/ui/inspectors/system-section.reel/system-section.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="SystemSection">
-        <div data-montage-id="systemSectionInspector"></div>
+        <div data-montage-id="systemSectionInspector" class="SystemSection-substitution"></div>
     </div>
 </body>
 </html>
