--- a/ui/sections/system/inspectors/web-ui.reel/web-ui.html
+++ b/ui/sections/system/inspectors/web-ui.reel/web-ui.html
@@ -125,14 +125,22 @@
                 "value": {"<->": "@owner.object.webui_https_port"}
             }
         },
+        "certificatesConverter": {
+            "prototype": "core/converter/select-option-converter",
+            "properties": {
+                "valuePropertyName": "id",
+                "labelPropertyName": "name"
+            }
+        },
         "SSLCertificate": {
             "prototype": "blue-shark/ui/field-select.reel",
             "properties": {
                 "element": {"#": "SSLCertificate"},
-                "label": "SSL/TLS Certificate"
+                "label": "SSL/TLS Certificate",
+                "converter": {"@": "certificatesConverter"}
             },
             "bindings": {
-                "options": {"<-": "@owner.Webui_Https_Certificate_Options"},
+                "options": {"<-": "@owner.certificates"},
                 "selectedValue": {"<->": "@owner.object.webui_https_certificate"}
             }
         }
