added delete button to disk UI

--- a/ui/sections/storage/inspectors/disk.reel/disk.html
+++ b/ui/sections/storage/inspectors/disk.reel/disk.html
@@ -55,7 +55,8 @@
                 "controller": {"@": "owner"}
             },
             "bindings": {
-                "context": {"<-": "@owner.context"}
+                "context": {"<-": "@owner.context"},
+                "canDelete": {"<-": "!!@owner.object._canDelete"}
             }
         },
         "name": {
