fixes bug on keep action

--- a/ui/sections/system/inspectors/boot-pool.reel/boot-environment-row.reel/boot-environment-row.html
+++ b/ui/sections/system/inspectors/boot-pool.reel/boot-environment-row.reel/boot-environment-row.html
@@ -54,10 +54,10 @@
             }
         },
 
-        "keep": {
-            "prototype": "blue-shark/ui/checkbox.reel",
+        "keepToggle": {
+            "prototype": "blue-shark/ui/toggle-switch.reel",
             "properties": {
-                "element": {"#": "keep"}
+                "element": {"#": "keepToggle"}
             },
             "bindings": {
                 "checked": {"<->": "@owner.object.keep"},
@@ -73,7 +73,7 @@
         <div><span data-montage-id="active"></span></div>
         <div><span data-montage-id="space"></span></div>
         <div><span data-montage-id="dateCreated"></span></div>
-        <div><span data-montage-id="keep"></span></div>
+        <div><span data-montage-id="keepToggle"></span></div>
     </div>
 </body>
 </html>
