--- a/ui/sections/system/inspectors/boot-pool.reel/boot-pool-action.reel/boot-pool-action.html
+++ b/ui/sections/system/inspectors/boot-pool.reel/boot-pool-action.reel/boot-pool-action.html
@@ -35,10 +35,10 @@
             }
         },
 
-        "keep": {
+        "keepButton": {
             "prototype": "blue-shark/ui/button.reel",
             "properties": {
-                "element": {"#": "keep"},
+                "element": {"#": "keepButton"},
                 "value": "Keep"
             }
         }
@@ -49,7 +49,7 @@
     <div data-montage-id="owner" class="BootPoolAction">
         <button data-montage-id="activate" class="Button--primary BootPoolAction-activate"></button>
         <button data-montage-id="clone" class="BootPoolAction-clone"></button>
-        <button data-montage-id="keep" class="BootPoolAction-keep"></button>
+        <button data-montage-id="keepButton" class="BootPoolAction-keep"></button>
         <div data-montage-id="delete" class="Button--alert Button--icon BootPoolAction-delete"><svg><use xlink:href="#i-trashCan"/></svg></div>
     </div>
 </body>
