--- a/ui/sections/storage/inspectors/encrypted-volume-importer.reel/encrypted-volume-importer.html
+++ b/ui/sections/storage/inspectors/encrypted-volume-importer.reel/encrypted-volume-importer.html
@@ -82,7 +82,7 @@
                 "controller": {"@": "owner"}
             },
             "bindings": {
-                "disks": {"<-": "@owner.availableDisks"}
+                "disks": {"<-": "@owner.disks.filter{isAvailable && !isReserved}"}
             }
         }
     }
